Fixed spacing

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,6 +3,6 @@
     text-align: center;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 0%;
+    margin-top: -5%;
     font-size: 20px;
 }
