--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -2,7 +2,7 @@
     color: #000000;
     text-align: center;
     font-size: 40px;
-    margin-top: 33%;
+    margin-top: 19.7%;
 }
 
 .project-title{
